demystify/src/problem/snapshots/demystify__problem__parse__tests__parse_essence_little.snap
---
source: demystify/src/problem/parse.rs
expression: scopes
---
[
    (
        "1<2",
        {
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        1,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        1,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        1,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        1,
                    ],
                },
                val: 4,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 4,
            },
        },
    ),
    (
        "2<3",
        {
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        2,
                    ],
                },
                val: 4,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 4,
            },
        },
    ),
    (
        "3<4",
        {
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        3,
                    ],
                },
                val: 4,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        4,
                    ],
                },
                val: 1,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        4,
                    ],
                },
                val: 2,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        4,
                    ],
                },
                val: 3,
            },
            VarValPair {
                var: PuzVar {
                    name: "grid",
                    indices: [
                        4,
                    ],
                },
                val: 4,
            },
        },
    ),
]
