demystify/src/problem/snapshots/demystify__problem__parse__tests__pretty_print.snap
---
source: demystify/src/problem/parse.rs
expression: k
snapshot_kind: text
---
{
    "mInfo",
    "mLanguage",
    "mStatements",
}
